# mas_fraud_detector_COMP385_Group6_Winter2026

./: .gitignore  README.md  baseline_registry_update.py  champion_registry_update.py  check_db.py  feature_importance.py  features.py  final_fraud_export.csv  fraud_pipeline.py  inspect_db.py  inspect_models.py  main.py  plots.py  preflight.py  preprocessor.py  project_structure.md  pyproject.toml  reports.py  run_phase1.py  run_phase2.py  run_phase3.py  scaler_sync.py  setup_and_run.py  train.py  train_baseline.py  vae_features.py
config/: llm_config.py  settings.py
core/: anomaly_judge.py  decision_agent.py  orchestrator.py  schemas.py  state.py
data/: temp_split.pkl
deterministic_inference/: run_pipeline.py
factories/: agent_factory.py
inference/: FraudInferencePipeline.py  LogicGate.py  agent_orchestrator.py  audit_cli.py  check_db.py  data_handler.py  find_rf.py  infrastructure_manager.py  mock_logic_gate.py  performance_tracker.py  registry_loader.py  report_generator.py  run_inference.py  system_comparator.py  task_architect.py  test_inference.py  transaction_processor.py  verdict_analyst.py  xai_logger.py
interfaces/: i_data_agent.py  i_eda_agent.py  i_ingestor_agent.py  i_preprocessor_agent.py  i_quality_critic_agent.py
logs/: 3054_data.json
mermaid_diagrams/: architecture.mmd  architecture_edwin.mmd  class_diagram.mmd  feedback.mmd  feedback_class.mmd  frontend.mmd  inference_architecture.mmd  inference_class_diagram.mmd  interaction_edwin.mmd  rag_class.mmd  rag_research.mmd  training_architecture.mmd  training_class_diagram.mmd
(+463 files in other folders)
